cmake_minimum_required(VERSION 3.0.0)
project(NL_KALMAN_FILTER VERSION 0.1.0)
include(CTest)
enable_testing()
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
set(SOURCES src/simulator.cpp)
include(CPack)
set(SDL2_INCLUDE_DIR "C:/cygwin64/usr/x86_64-w64-mingw32/sys-root/mingw/include/")
set(SDL2_LIBRARY_DIR "C:/cygwin64/usr/x86_64-w64-mingw32/sys-root/mingw/lib")
include_directories(${SDL2_INCLUDE_DIR})
add_executable(NL_KALMAN_FILTER ${SOURCES})
# target_link_libraries(NL_KALMAN_FILTER -lmingw32 ${SDL2_LIBRARY_DIR}/libSDL2main.a ${SDL2_LIBRARY_DIR}/libSDL2.dll.a -mwindows)